--- a/views/cardelete.pug
+++ b/views/cardelete.pug
@@ -6,32 +6,32 @@ block content
   if(toShow == null)
     h2 No instance to delete
   else
-    - let gasid = toShow._id
-    - let gas_type = toShow.gas_type
-    - let gasquantity = toShow.quantity
-    - let gascost = toShow.cost
-    - let actionid = "/resource/gas/" + gasid
+    - let carid = toShow._id
+    - let car_manufacturer  = toShow.manufacturer
+    - let model = toShow.model
+    - let carcost = toShow.cost
+    - let actionid = "/resource/car/" + carid
     script let actionid = "#{actionid}"
     div
     div.row
-    div(class='gasAttr mr-3') Gas ID is: 
-      span(style="color:red") #{gasid}
+    div(class='carAttr mr-3') Car ID is: 
+      span(style="color:red") #{carid}
     div.row
-    div(class='gasAttr mr-3') Gas Type is: 
-      span(style="color:red") #{gas_type}
+    div(class='carAttr mr-3') Car Manufacturer is: 
+      span(style="color:red") #{car_manufacturer}
     div.row
-    div(class='gasAttr mr-3') Gas quantity is: 
-      span(style="color:red") #{gasquantity}
+    div(class='carAttr mr-3') Car quantity is: 
+      span(style="color:red") #{model}
     div.row
-    div(class='gasAttr mr-3') Gas Cost is: 
-      span(style="color:red") #{gascost}
+    div(class='carAttr mr-3') Car Cost is: 
+      span(style="color:red") #{carcost}
     button(class="btn btn-danger m-2" onclick="deleteOnid()") Delete
     button(class="btn btn-secondary m-2" onclick="cancel()") Cancel
 
   script.
     function cancel() {
-    // Go back to the home page for the gas collection
-    window.location.href='/gas'
+    // Go back to the home page for the car collection
+    window.location.href='/car'
     }
     function deleteOnid() {
     console.log("starting delete")
@@ -42,7 +42,7 @@ block content
     return resp.json(); // or resp.text() or whatever the server sends
     }).then((body) => {
     alert("Delete succeded")
-    window.location.href='/gas'
+    window.location.href='/car'
     // TODO handle body
     }).catch((error) => {
     // TODO handle error
