--- a/views/car.pug
+++ b/views/car.pug
@@ -2,19 +2,26 @@ extends layout
 
 block content
   h1= title
-  //- - let items = ['gas_type','quantity','cost']
-  - let items = results;
-  - let o;
-  script.
-    function buy(x){
-      alert('purchased item ' + x)
-   } 
-  div(class='container-fluid')
-    div(class='row')
-    div(class="row row-cols-1 row-cols-sm-4 g-6")
-      each o, index in items
-        div(class="card text-dark bg-warning mb-3" class='col' class='card' class='card-body' class='card-text' onclick='buy('+index+')') #{o}
-        
-        
-
-  
+  - let cars = results; 
+  table(class="table table-stripped table-bordered")
+        thead(style="background-color:yellow; color:red;font-size:20px;font-family:calibri;") 
+            tr
+                td car ID
+                td car manufacturer 
+                td car model
+                td car cost 
+                td Update
+        tbody 
+            each car in cars
+                - let destination = `dispatch(\"/car/update?id=${car._id}\")`
+                tr
+                    td #{car._id}
+                    td #{car.manufacturer}
+                    td #{car.model}
+                    td #{car.cost}
+                    td
+                      button.btn( class="btn-primary ml-1", onclick= destination) Update
+                script.
+                    function dispatch(path){
+                      window.location.href=path
+                    }
